--- a/webstatic/0-index.html
+++ b/webstatic/0-index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<header style="background-color: #FF0000; height: 70px; width: 100%"></header>
-	<body></body>
-	<footer style="bottom: 0; position: fixed; background-color: #00FF00; height: 60px; width: 100%">
-			<p style="text-align: center; padding-top: 5px; padding-bottom: 10px">Holberton School</p>
+	<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+	<body style="margin: 0; padding: 0;"></body>
+	<footer style="bottom: 0; position: fixed; background-color: #00FF00; height: 60px; width: 100%;">
+			<p style="text-align: center; padding-top: 5px; padding-bottom: 10px;">Holberton School</p>
 	</footer>
 </html>
