--- a/webstatic/1-index.html
+++ b/webstatic/1-index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 	<head>
 		<style>
-		footer{bottom: 0; position: fixed; background-color: #00FF00; height: 60px; width: 100%}
-		header{background-color: #FF0000; height: 70px; width: 100%}
-		p{text-align: center; padding-top: 5px; padding-bottom: 10px}
+		body {margin: 0;
+			  padding: 0;}
+		footer {bottom: 0;
+				position: fixed;
+				background-color: #00FF00;
+				height: 60px; width: 100%;}
+		header {background-color: #FF0000;
+				height: 70px; width: 100%;}
+		p {text-align: center;
+		   padding-top: 5px;
+		   padding-bottom: 10px;}
 		</style>
 	<header ></header>
 	<body></body>
