--- a/webstatic/6-index.html
+++ b/webstatic/6-index.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
+
 <html lang="eng">
+
 	<head>
 		<title>HBnB</title>
 		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="styles/4-common.css">
 		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
 		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-		<link rel="stylesheet" type="text/css" href="styles/5-filters.css">
+		<link rel="stylesheet" type="text/css" href="styles/6-filters.css">
 	</head>
+
 	<body>
+
 		<header>
 			<div class="logo"></div>
 		</header>
+
 		<div class="container">
 			<section class="filters">
 				<button type="button">search</button>
+
 				<div class="locations">
+					<ul class="popover">
+						<li>
+							<h3>California</h3>
+							<ul>
+								<li><h4>San Francisco</h4></li>
+								<li><h4>Los Altos</h4></li>
+							</ul>
+						</li>
+
+						<li>
+							<h3>Arizona</h3>
+							<ul>
+								<li><h4>Page</h4></li>
+								<li><h4>Page2</h4></li>
+							</ul>
+						</li>
+					</ul>
 					<h3>States</h3>
 					<h4>California, Arizona...</h4>
 				</div>
+
 				<div class="amenities">
+					<ul class="popover">
+							<li><h4>Internet</h4></li>
+							<li><h4>TV</h4></li>
+							<li><h4>Kitchen</h4></li>
+							<li><h4>Iron</h4></li>
+					</ul>
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen...<h4>
 				</div>
+
 			</section>
 		</div>
+
 		<footer>
 			<p>Holberton School</p>
 		</footer>
+
 	</body>
+
 </html>
