--- a/webstatic/8-index.html
+++ b/webstatic/8-index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
 		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
 		<link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-		<link rel="stylesheet" type="text/css" href="styles/7-places.css">
+		<link rel="stylesheet" type="text/css" href="styles/8-places.css">
 	</head>
 
 	<body>
@@ -59,11 +59,62 @@
 
 			<section class="places">
 				<h1>Places</h1>
-				<article><h2>My Home</h2></article>
-				<article><h2>Tiny house</h2></article>
-				<article><h2>A suite</h2></article>
-			</section>
 
+				<article>
+					<div class="title_box">
+						<h2>My Home</h2>
+						<div class="price_by_night">$80</div>
+					</div>
+					<div class="information">
+						<div class="max_guest">2 Guests</div>
+						<div class="number_rooms">1 Bedroom</div>
+						<div class="number_bathrooms">1 Bathroom</div>
+					</div>
+					<div class="user">
+						<b>Owner:</b> Wolf Hopkins
+					</div>
+					<div class="description">
+						This be m'crib
+					</div>
+				</article>
+
+				<article>
+					<div class="title_box">
+						<h2>Tiny house</h2>
+						<div class="price_by_night">$65</div>
+					</div>
+					<div class="information">
+						<div class="max_guest">2 Guests</div>
+						<div class="number_rooms">1 Bedroom</div>
+						<div class="number_bathrooms">1 Bathroom</div>
+					</div>
+					<div class="user">
+						<b>Owner:</b> Wolf Hopkins
+					</div>
+					<div class="description">
+						This be m'crib
+					</div>
+				</article>
+
+				<article>
+					<div class="title_box">
+						<h2>a suite</h2>
+						<div class="price_by_night">$190</div>
+					</div>
+					<div class="information">
+						<div class="max_guest">20 Guests</div>
+						<div class="number_rooms">10 Bedroom</div>
+						<div class="number_bathrooms">14 Bathroom</div>
+					</div>
+					<div class="user">
+						<b>Owner:</b> Wolf Hopkins
+					</div>
+					<div class="description">
+						This be m'crib
+					</div>
+				</article>
+
+			</section>
 		</div>
 
 		<footer>
