--- a/webstatic/100-index.html
+++ b/webstatic/100-index.html
@@ -71,10 +71,12 @@
 						<div class="number_bathrooms">1 Bathroom</div>
 					</div>
 					<div class="user">
-						<b>Owner:</b> Wolf Hopkins
+						<b>Owner:</b> John Lennon
 					</div>
 					<div class="description">
-						This be m'crib
+						This is a lovely 1 bedroom 1 bathroom apartment that can accomodate 2 people.
+						It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square,
+						2 stops to Bund, 3 stops the Jingan Temple.
 					</div>
 				</article>
 
@@ -89,10 +91,16 @@
 						<div class="number_bathrooms">1 Bathroom</div>
 					</div>
 					<div class="user">
-						<b>Owner:</b> Wolf Hopkins
+						<b>Owner:</b> Adirenne
 					</div>
 					<div class="description">
-						This be m'crib
+						Our place is a private, affordable stand-alone guest house centrally
+						located just minutes to French Quarters, downtown, the Fair Grounds(Jazz Fest)
+						and City Park. The guest house is a quaint, 400 square ft. with a full bath,
+						mini kitchen, & living room. The extra high ceilings make the home feel
+						more spacious. The sofa converts into a bed also. We have a hand made counter
+						are that adds character to the room and a great porch/deck to relax on and have
+						a glass of Merlot.
 					</div>
 				</article>
 
@@ -110,7 +118,7 @@
 						<b>Owner:</b> Wolf Hopkins
 					</div>
 					<div class="description">
-						This be m'crib
+						This be m'future crib
 					</div>
 				</article>
 
