finished the project

--- a/webstatic/100-index.html
+++ b/webstatic/100-index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
 		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
 		<link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-		<link rel="stylesheet" type="text/css" href="styles/8-places.css">
+		<link rel="stylesheet" type="text/css" href="styles/100-places.css">
 	</head>
 
 	<body>
@@ -65,18 +65,44 @@
 						<h2>My Home</h2>
 						<div class="price_by_night">$80</div>
 					</div>
+
 					<div class="information">
 						<div class="max_guest">2 Guests</div>
 						<div class="number_rooms">1 Bedroom</div>
 						<div class="number_bathrooms">1 Bathroom</div>
 					</div>
+
 					<div class="user">
 						<b>Owner:</b> John Lennon
 					</div>
+
 					<div class="description">
 						This is a lovely 1 bedroom 1 bathroom apartment that can accomodate 2 people.
 						It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square,
 						2 stops to Bund, 3 stops the Jingan Temple.
+					</div>
+
+					<div class="amenities_info">
+						<h2>Amenities</h2>
+						<ul>
+							<li class="tv">TV</li>
+							<li class="wifi">Wifi</li>
+							<li class="pets">Pets friendly</li>
+						</ul>
+					</div>
+
+					<div class="reviews">
+						<h2>2 Reviews</h2>
+						<ul>
+							<li>
+								<h3>From Bob Dylan the 27th January 2017</h3>
+								<p>Runshi is an epic host. Nothing more I can say. 5 star!</p>
+							</li>
+							<li>
+								<h3>From Connor the 4th of January 2017</h3>
+								<p>Highly recommended!</p>
+							</li>
+						</ul>
 					</div>
 				</article>
 
@@ -85,6 +111,7 @@
 						<h2>Tiny house</h2>
 						<div class="price_by_night">$65</div>
 					</div>
+
 					<div class="information">
 						<div class="max_guest">2 Guests</div>
 						<div class="number_rooms">1 Bedroom</div>
@@ -93,6 +120,7 @@
 					<div class="user">
 						<b>Owner:</b> Adirenne
 					</div>
+
 					<div class="description">
 						Our place is a private, affordable stand-alone guest house centrally
 						located just minutes to French Quarters, downtown, the Fair Grounds(Jazz Fest)
@@ -102,6 +130,29 @@
 						are that adds character to the room and a great porch/deck to relax on and have
 						a glass of Merlot.
 					</div>
+
+					<div class="amenities_info">
+						<h2>Amenities</h2>
+						<ul>
+							<li class="pets">Pets friendly</li>
+						</ul>
+					</div>
+
+					<div class="reviews">
+						<h2>2 Reviews</h2>
+						<ul>
+							<li>
+								<h3>From Max the 15th January 2017</h3>
+								<p>
+									Fantastic place. It was clean. Adrienne was great (even though we did not meet in person)
+									and everything went super smooth. Location is also great if you like running and something
+									a bit more quiet. I would suggest a car or take into consideration that you might have to uber
+									into the city from the location. Overall, would recommend the place anytime.
+								</p>
+							</li>
+						</ul>
+					</div>
+
 				</article>
 
 				<article>
@@ -109,16 +160,40 @@
 						<h2>a suite</h2>
 						<div class="price_by_night">$190</div>
 					</div>
+
 					<div class="information">
 						<div class="max_guest">20 Guests</div>
 						<div class="number_rooms">10 Bedroom</div>
 						<div class="number_bathrooms">14 Bathroom</div>
 					</div>
+
 					<div class="user">
 						<b>Owner:</b> Wolf Hopkins
 					</div>
+
 					<div class="description">
 						This be m'future crib
+					</div>
+
+					<div class="amenities_info">
+						<h2>Amenities</h2>
+						<ul>
+							<li class="tv">TV</li>
+							<li class="wifi">Wifi</li>
+							<li class="pets">Pets friendly</li>
+						</ul>
+					</div>
+
+					<div class="reviews">
+						<h2>1 Reviews</h2>
+						<ul>
+							<li>
+								<h3>From Mr. Dogg the 20th April 2017</h3>
+								<p>
+									This place is lit yo!
+								</p>
+							</li>
+						</ul>
 					</div>
 				</article>
 
