--- a/webstatic/100-index.html
+++ b/webstatic/100-index.html
@@ -185,7 +185,7 @@
 					</div>
 
 					<div class="reviews">
-						<h2>1 Reviews</h2>
+						<h2>1 Review</h2>
 						<ul>
 							<li>
 								<h3>From Mr. Dogg the 20th April 2017</h3>
