last typo I swear

--- a/webstatic/100-index.html
+++ b/webstatic/100-index.html
@@ -139,7 +139,7 @@
 					</div>
 
 					<div class="reviews">
-						<h2>2 Reviews</h2>
+						<h2>1 Review</h2>
 						<ul>
 							<li>
 								<h3>From Max the 15th January 2017</h3>
