w3c valid where needed

--- a/webstatic/1-index.html
+++ b/webstatic/1-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 	<head>
+		<title>HBnB</title>
 		<style>
 		body {margin: 0;
 			  padding: 0;}
@@ -14,9 +15,12 @@
 		   padding-top: 5px;
 		   padding-bottom: 10px;}
 		</style>
+	</head>
+	<body>
 	<header ></header>
-	<body></body>
-	<footer>
+
+		<footer>
 			<p>Holberton School</p>
-	</footer>
+		</footer>
+		</body>
 </html>
