--- a/webstatic/0-index.html
+++ b/webstatic/0-index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-	<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
-	<body style="margin: 0; padding: 0;"></body>
-	<footer style="bottom: 0; position: fixed; background-color: #00FF00; height: 60px; width: 100%;">
+<html lang="en">
+	<head>
+		<title>HBnB</title>
+	</head>
+	<body style="margin: 0; padding: 0;">
+		<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+			<footer style="bottom: 0; position: fixed; background-color: #00FF00; height: 60px; width: 100%;">
 			<p style="text-align: center; padding-top: 5px; padding-bottom: 10px;">Holberton School</p>
 	</footer>
+	</body>
 </html>
