--- a/webstatic/2-index.html
+++ b/webstatic/2-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 	<head>
 		<title>HBnB</title>
 		<link rel="stylesheet" type="text/css" href="styles/2-common.css">
