--- a/webstatic/4-index.html
+++ b/webstatic/4-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 	<head>
 		<title>HBnB</title>
 		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
