--- a/webstatic/5-index.html
+++ b/webstatic/5-index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="eng">
+<html lang="en">
 
 	<head>
 		<title>HBnB</title>
@@ -28,7 +28,7 @@
 
 				<div class="amenities">
 					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...<h4>
+					<h4>Internet, Kitchen...</h4>
 				</div>
 
 			</section>
