--- a/webstatic/6-index.html
+++ b/webstatic/6-index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="eng">
+<html lang="en">
 
 	<head>
 		<title>HBnB</title>
@@ -51,7 +51,7 @@
 							<li><h4>Iron</h4></li>
 					</ul>
 					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...<h4>
+					<h4>Internet, Kitchen...</h4>
 				</div>
 
 			</section>
